Ninja: CMake cleans metadata in wrong working directory
When you run cmake from a directory other than the build (e.g. cmake -G Ninja -Bbuild -S.
) it's attempting to run ninja -t dyndeps
etc from wherever you are. This started occurring as of the v1.10 Ninja release. I'm guessing the version checking mechanism wasn't sanitized for 1.10 > 1.9.
Edited by Brad King