cmGlobalNinjaGenerator: run ninja tools in the build directory

Fixes: #20303